[LandingPage|OfferCardComponent] requesting offers and listing them | created offer card component

--- a/src/pages/LandingPage/style.less
+++ b/src/pages/LandingPage/style.less
@@ -10,4 +10,13 @@
 	min-height: calc(100vh - @footerHeight);
 	display: flex;
 	flex-wrap: wrap;
+	justify-content: center;
+
+	.@{pageName}-offer-grid{
+		display: flex;
+		flex-wrap: wrap;
+		width: 100%;
+		padding: 24px;
+		max-width: 1144px;
+	}
 }
