--- a/src/components/OfferCardComponent/style.less
+++ b/src/components/OfferCardComponent/style.less
@@ -29,6 +29,11 @@
 			font-family: Roboto Condensed,sans-serif;
 			font-weight: 700;
 			padding: 2px;
+			display: -webkit-box;
+			-webkit-line-clamp: 2;
+			-webkit-box-orient: vertical;
+			line-height: 27px;
+			overflow: hidden;
 		}
 	}
 
